# go-polars

./: .gitignore  LICENSE  MANIFEST.in  README.md  benchmark.py  demo.py  go.mod  pyproject.toml  setup.py  test.py  test_go_polars.py  test_gopolars.py
.github/workflows/: benchmark.yml  python-publish.yaml
benchmarks/: README.md  benchmark.py  benchmark_results_blog.md  stress_test.py
bridge/: bridge.go  bridge_test.go  go.mod
bridge/dataframe/: dataframe.go
dataframe/: dataframe.go  groupby_sort.go  permutation.go  radix.go  radix_parallel.go  radix_parallel_purego.go  radix_purego.go  radix_writer.go  reduce_purego.go  reduce_simd.go
go_polars/: __init__.py  _go_polars.c  libgo_polars.h
gopolars/: __init__.py
tests/: test_dataframe.py
tests/integration/: test_dataframe.py
types/: types.go
types/types/: types.go
